# edgetx-voices-pipertts

./: .gitignore  README.md  generate.sh  pyproject.toml  voice-gen-piper-tts.py
voices/: en-US.csv
